# mala_v2

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  agent.md  conftest.py  hypothesis_agent.py  main.py  pyproject.toml  pytest.ini  reoptimize_exits.py
config/: hypothesis_defaults.yaml
config/bhiksha_handoff/: operator_defaults_v1.yaml
prompts/: known-strategy-run-queue.md  market-impulse-discovery.md  rerun-top-families-after-guardrails.md  run-single-hypothesis-discovery.md
research/hypotheses/: TEMPLATE.md  big-move-miss-audit-current-basket.md  compression-breakout-current-basket-discovery.md  elastic-band-current-basket-discovery.md  elastic-band-nvda-long-catalog-replay.md  elastic-band-tsla-short-catalog-replay.md  expand30-amd-mi-01.md  expand30-amzn-market-impulse.md  expand30-googl-market-impulse.md  (+43 more)
scripts/: analyze_personal_trades.py  evaluate_personal_replay.py  export_public_history.py  install_oldmac_orchestrator_launchd.sh
src/: config.py  time_utils.py
src/chronos/: client.py  (+2 more)
tests/: test_catalog.py  test_catalog_steward.py  test_catalog_volume_sensitivity.py  test_exit_optimizer.py  test_forecast_diagnostic.py  test_google_sheets.py  test_holdout_trade_rows.py  test_hypothesis_agent_helpers.py  test_local_orchestrator.py  test_mala_handoff.py  test_market_impulse_descendants.py  test_market_regime.py  test_monte_carlo.py  test_newton.py  test_oracle.py  test_personal_trade_ledger.py  test_recommendation_tier.py  test_research_ops.py  test_research_runner.py  test_research_stages.py  test_search_space.py  test_strategy.py  test_strategy_factory.py  test_strategy_novel.py  test_time_utils.py  test_trade_simulator.py
(+64 files in other folders)
